[project]
name = "layerbrain"
dynamic = ["version"]
description = "The official Python SDK for the Layerbrain API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Layerbrain", email = "engineering@layerbrain.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.15",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://layerbrain.com"
Documentation = "https://docs.layerbrain.com"
Repository = "https://github.com/layerbrain/layerbrain-python"
Changelog = "https://github.com/layerbrain/layerbrain-python/releases"

[project.scripts]
layerbrain = "layerbrain.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "layerbrain/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["layerbrain"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
