[project]
name = "layerbrain"
dynamic = ["version"]
description = "The official Python SDK and CLI for the Layerbrain API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Layerbrain", email = "engineering@layerbrain.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "typer>=0.15",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://layerbrain.com"
Documentation = "https://docs.layerbrain.com"
Repository = "https://github.com/layerbrain/layerbrain"
Changelog = "https://github.com/layerbrain/layerbrain/releases"

[project.scripts]
layerbrain = "layerbrain.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "layerbrain/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["layerbrain"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
