[project]
name = "layerbrain-cli"
version = "0.0.1"
description = "The Layerbrain command-line interface"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Layerbrain", email = "engineering@layerbrain.com" }]
dependencies = [
    "layerbrain==0.0.1",
    "rich>=13.0",
    "typer>=0.15",
]

[project.scripts]
layerbrain = "layerbrain_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["layerbrain_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
